# screen_recording

./: Dockerfile  README.md  docker-compose.yml  gopro_entrypoint.sh  pyproject.toml
src/screen_recorder/: __main__.py  audio.py  configs.py  encoders.py  factories.py  ffmpeg.py  manager.py  runner.py
src/screen_recorder/runners/: __init__.py  base.py  gopro.py  screen.py
